# dz_3_GEMS

./: CMakeLists.txt  main.cpp
